Sun May 28 00:42:05 CEST 2006 (acab)
------------------------------------
  * libclamav/upx.c: Fixed upx bug in find_ep reported by Sven

Sat May 27 15:37:51 BST 2006 (njh)
----------------------------------
  * libclamav:	Some debugging messages didn't print new lines, reported by Sven

Sat May 27 16:23:43 CEST 2006 (tk)
----------------------------------
  * libclamav/others.h: ?e16_to_host macros were promoting 16-bit values to 24
			Patch by Andy Fiddaman <clam*fiddaman.net>

Sat May 27 13:50:42 CEST 2006 (tk)
----------------------------------
  * libclamav/scanners.c: fix logic bug in new code
			  Reported by aCaB and Sven

Wed May 24 14:04:56 CEST 2006 (acab)
------------------------------------
  * libclamav/upx.c: Fixed macro typo reported by Andy Fiddaman.

Tue May 23 21:51:37 CEST 2006 (acab)
------------------------------------
  * libclamav/upx.c: Improved UPX unpacking capabilities and geneal cleanup
                     Patch by Andrey J. Melnikoff

Mon May 22 18:27:09 CEST 2006 (tk)
----------------------------------
  * libclamav/unzip.[ch]: new files
  * libclamav/zziplib: remove all files
  * libclamav: use new zip module

Fri May 19 12:02:28 BST 2006 (njh)
----------------------------------
  libclamav:	Mbox related files now only need to include mbox.h

Fri May 19 10:56:48 BST 2006 (njh)
---------------------------------
  * various:	Refer to the webpage for submitting bug reports, not just an
  			email address

Thu May 18 13:25:58 CEST 2006 (tk)
----------------------------------
  * libclamav: minor code cleanup

Thu May 18 12:00:23 CEST 2006 (tk)
----------------------------------
  * libclamav/str.c: cli_hex2int: small tweak from NJH

Tue May 16 21:15:25 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Some HTML.Phishing.Bank-426 were getting through,
  				based on help from Sven

Mon May 15 20:23:30 CEST 2006 (tk)
----------------------------------
  * shared/options.[ch]: new command line parser module